--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "com.devetc.sampleunitypackage",
-    "version": "0.0.1",
-    "displayName": "devetc sampleunitypackage",
+    "displayName": "sampleunitypackage",
     "description": "A sample description ~~~~~~~~~~~~~~",
+    "version": "0.0.1",
     "author": 
     {
         "name": "aaaaaaa",
