--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     },
     "contributors": [
     {
-      "name": "bbbbbb",
-      "twitter": "@bbbbbb
+      "name": "bbbbbb"
     }
     ],
     "keywords": [
